[project]
name = "tien-link"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloakbrowser>=0.3.19",
    "httpx>=0.27",
]

[project.scripts]
tien-link = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
